user-data-terraform/main.tf
resource "aws_instance" "name" {
    ami = "ami-0571c1aedb4b8c5fc"
    instance_type = "t3.micro"
    key_name = "sudhamsh-dev"
    vpc_security_group_ids = [ aws_security_group.allow_tls.id ]
    user_data = "${file("install-apache.sh")}"
  
}
resource "aws_security_group" "allow_tls" {
  name        = "allow_tls"
  description = "Allow TLS inbound traffic"

  ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}
